style.css
/* baskerville BT */

@font-face {
		font-family: baskervillebt-regular;
		src: url(includes/font/BaskervilleBT.ttf);
}
@font-face {
		font-family: baskervillebt-regular;
		src: url(includes/font/BaskervilleBoldBT.ttf);
		font-weight: bold;
}

*{
	margin: 0;
	padding: 0;
	/*font-family:*/
}
html {
  margin: 0 auto;
  padding: 0;
	height: 100vh;
  overflow-x: hidden;
}
body {
  margin: 0 auto;
	padding:0;
	height: 100%;
	width: 100%;
  overflow-x: hidden;
	font-family: baskervillebt-regular;
}

.header{
	min-height: 100vh;
	width: 100%;
	background-image: linear-gradient(
		rgba(219,  200,  182, 0.15),
		rgba(219,  200,  182, 0.15)),
		/*rgba(110 , 115 , 87, 0.5),
		rgba(110 , 115 , 87, 0.5)),*/
		url(images/bannersmall.png)
		;
	background-position: center;
	background-size: cover;
	position: relative;
}

.sub-header{
	height: 50%;
	width: 100%;
	background-image: linear-gradient(
		rgba(219,  200,  182, 0.3),
		rgba(219,  200,  182, 0.3)),
		/*rgba(110 , 115 , 87, 0.5),
		rgba(110 , 115 , 87, 0.5)),*/
		url(images/travel.png)
		;
		background-position: center;
		background-size: cover;
		text-align: center;
		position: relative;
}

#travel {
	background-image: linear-gradient(
		rgba(0,  0,  0, .3),
		rgba(0,  0,  0, .3)),
		/*rgba(110 , 115 , 87, 0.5),
		rgba(110 , 115 , 87, 0.5)),*/
		url(images/events.png)
		;
}

#events {
	background-image: linear-gradient(
		rgba(0,  0,  0, .3),
		rgba(0,  0,  0, .3)),
		/*rgba(110 , 115 , 87, 0.5),
		rgba(110 , 115 , 87, 0.5)),*/
		url(images/ponds.png)
		;
}

#about_us {
	height: 100vh;
	background-image: linear-gradient(
		rgba(0,  0,  0, .3),
		rgba(0,  0,  0, .3)),
		/*rgba(110 , 115 , 87, 0.5),
		rgba(110 , 115 , 87, 0.5)),*/
		url(images/about_us.png)
		;
}

#faq {
	height: 100vh;
	background-image: linear-gradient(
		rgba(0,  0,  0, .3),
		rgba(0,  0,  0, .3)),
		/*rgba(110 , 115 , 87, 0.5),
		rgba(110 , 115 , 87, 0.5)),*/
		url(images/faq.png)
		;
}


.footer{
	background-color: rgba(110, 115, 87, .15);
}


nav{
	display: flex;
	padding: 2% 6%;
	justify-content: space-between;
	align-items: center;
}

nav img{
	width: 120px;
}

.nav-links{
	flex: 1;
	text-align: right;
}

.nav-links ul li {
	list-style: none;
	display: inline-block;
	padding: 8px 10px;
	position: relative;
}

.nav-links ul li a{
	color: #fff;
	text-decoration: none;
	font-size: 24px;
}

/*defaulting to no effect*/
.nav-links ul li::after {
	content: '';
	width: 0%;
	height: 2px;
	background: rgba(110 , 115 , 87, 1);
	display: block;
	margin: auto;
	transition:0.5s;
}
/*hover effect*/
.nav-links ul li:hover::after{
	width:100%;
}

.header .text-box{
	width: 90%;
	color: #fff;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
	text-align: center;
}

.sub-header .text-box{
	width: 50%;
	color: #fff;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
	text-align: center;
}

.text-box h1{
	font-size: 62px;
}

.text-box p{
	/* margin: 10px 0 40px; */
	font-size: 35px;
	color: #fff;
	padding-top: 40px;
	padding-bottom: 40px;
}
/*Idk why this is hero-btn*/
.hero-btn{
	display: inline-block;
	text-decoration: none;
	color: #fff;
	border: 1px solid #fff;
	padding: 12px 34px;
	font-size: 13px;
	background: transparent;
	position: relative;
	cursor: pointer;
}

.hero-btn:hover{
	border: 1px solid rgb(110 , 115 , 87);
	background: rgb(110 , 115 , 87);
	transition: 1s;
}

nav .fa{
	display: none;
}

.home-col{
	flex-basis: 46%;
	/* padding: 30px 2px; */
}

#left{
	text-align: right;
	margin-right: 2.5%;
	padding-right: 30px;
}

#right{
	text-align: left;
	margin-left: 2.5%;
	padding-left: 30px;

}

/* #home{
	margin-left: 20%;
	margin-right: 20%;
} */



.home-divider{
	border-left: 4px solid rgb(110 , 115 , 87);
	visibility: hidden;
}


@media(max-width:700px)  {
	#faq {
		background-image: linear-gradient(
			rgba(0,  0,  0, .3),
			rgba(0,  0,  0, .3)),
			/*rgba(110 , 115 , 87, 0.5),
			rgba(110 , 115 , 87, 0.5)),*/
			url(images/faq_small.png)
			;
	}

	.hero-btn{
		padding: 10px 10px;
	}

	.text-box {
		top: 70%;
	}

	.header .text-box{
		top: 50%;
	}

	.text-box p {
    /* margin: 10px 0 40px; */
    font-size: 20px;
    color: #fff;
		padding: 0px;
		padding-bottom: 10px;
	}
	#left{
		text-align: center;
		margin-right: 2.5%;
		padding-right: 0;
	}

	#right{
		text-align: center;;
		margin-left: 2.5%;
		padding-left: 0;

	}

	.text-box h1{
		font-size: 36px;
	}

	.text-box .row{
		margin-top: 60%;
	}

	.nav-links ul li {
		display: inline-block;
	}
	.nav-links{
		position: fixed;
		background: rgb(110 115 87);
		height: 100vh;
		width: 200px;
		top: 0;
		right: -200px;
		text-align: left;
		z-index: 2;
		transition: 1s;
	}
	nav .fa{
		display: block;
		color: #fff;
		margin: 10px;
		font-size: 22px;
		cursor: pointer;
	}
	.nav-links ul{
		padding-left: 30px;
	}
	.nav-links ul li:hover::after{
		background:#fff;
		width:100%;
	}

	.row{
		flex-direction: column;
		text-align: center;
	}

	#home{
		margin-left: 20%;
		margin-right: 20%;
	}

	.divider{
		border-top: 6px solid rgb(110 , 115 , 87);
	}
	.home-divider{
		border-top: 2px solid rgb(110 , 115 , 87);
		visibility: hidden;
	}
}

/*--stuff if we want another section--*/
/*Footer*/
.footer{
	width: 100%;
	text-align: center;
	padding: 10px 0;
}

.footer h4{
	margin-bottom: 2.5%;
	margin-top: 2.5%;
	font-weight: 600;
}

.icons .fa{
	color: #f44336;
	margin: 0 13px;
	cursor: pointer;
	padding: 18px 0;
}

.fa-heart-o{
	color: #f44336;
}

/* travel page */

.sub-header h1{
	margin-top: 0px;
}

.travel{
	margin: 0 10%;
	margin: auto;
	padding-top: 15px;
	padding-bottom: 50px;
	text-align: center;
	background-color: rgba(110, 115, 87, .15);
}

.travel h1 {
	font-size: 30px;
	text-align: center;
	padding: 20px;
}

.travel h2 {
	font-size: 20px;
	text-align: center;
	padding: 5px;
}

.travel-container {
	 margin-left: 10%;
	 margin-right: 10%;
}

 .details {
	max-width: 300px;
	margin: 5px auto;
	/* adding padding */
	text-align: center;
}

.row
{
    margin-top: 0%;
		margin-bottom: 0%;
    display: flex;
    text-align: center;
		justify-content: center;
}

.row p{
	/* display: block; */
}


.travel-col{
	flex-basis: 46%;
	padding: 10px 2px;
}

.travel-col img{
	width: 100%
}

.travel-col h1{
	padding-top: 0;
}

.travel-col p{
	padding: 0px 0 0px;
}

.divider{
	border-left: 6px solid rgb(110 , 115 , 87);
}

 .red-btn{
	font-size: 16px;
	border: 3px solid rgba(110, 115, 87, 1);
	background: #fff;
	color: rgba(110, 115, 87, 1);
}

.red-btn:hover{
	color:#fff;
	border: 3px solid rgba(110, 115, 87, 1);
}

/*Style the rsvpForm */
#rsvpForm {
  background-color: #ffffff;
  margin: 100px auto;
  padding: 40px;
  width: 70%;
  min-width: 300px;
}

/* Style the input fields */
input {
  padding: 10px;
  width: 100%;
  font-size: 17px;
  font-family: Raleway;
  border: 1px solid #aaaaaa;
}

/* Mark input boxes that gets an error on validation: */
input.invalid {
  background-color: #ffdddd;
}

/* Hide all steps by default: */
.tab {
  display: none;
}

/* Make circles that indicate the steps of the form: */
.step {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbbbbb;
  border: none;
  border-radius: 50%;
  display: inline-block;
  opacity: 0.5;
}

/* Mark the active step: */
.step.active {
  opacity: 1;
}

/* Mark the steps that are finished and valid: */
.step.finish {
  background-color: #04AA6D;
}

/* stylize radio buttons */

.radio {
	background: #454857;
	padding: 4px;
	border-radius: 3px;
	box-shadow: inset 0 0 0 3px rgba(35, 33, 45, 0.3),
		0 0 0 3px rgba(185, 185, 185, 0.3);
	position: relative;
}

.radio input {
	width: auto;
	height: 100%;
	appearance: none;
	outline: none;
	cursor: pointer;
	border-radius: 2px;
	padding: 4px 8px;
	background: #454857;
	color: #bdbdbdbd;
	font-size: 14px;
	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
		"Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
	transition: all 100ms linear;
}

.radio input:checked {
	background-image: linear-gradient(180deg, #95d891, #74bbad);
	color: #fff;
	box-shadow: 0 1px 1px #0000002e;
	text-shadow: 0 1px 0px #79485f7a;
}

.radio input:before {
	content: attr(label);
	display: inline-block;
	text-align: center;
	width: 100%;
}

.event_time{
	font-weight: bold;
}

.event_location{
	font-weight: bold;
}

